--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LCM</title>
-    <link rel="stylesheet" href="../LCM&HCF/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>LCM HCF Calculator</header>
@@ -15,6 +15,6 @@
         <p id="output">Answer</p>
     </form>
     <footer>design and developed by &copy; <a href="https://github.com/SanjayDev004" target="_blank">SanjayDev004</a></footer>
-    <script src="../LCM&HCF/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
